phase_01/decafParser.py
# Generated from decaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class decafParser ( Parser ):

    grammarFileName = "decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'int'", "'double'", 
                     "'bool'", "'string'", "'if'", "'else'", "'while'", 
                     "'for'", "'return'", "'break'", "'print'", "'this'", 
                     "'new'", "'NewArray'", "'ReadInteger'", "'ReadLine'", 
                     "'void'", "'null'" ]

    symbolicNames = [ "<INVALID>", "Ws", "Comment", "Int", "Double", "Bool", 
                      "String", "If", "Else", "While", "For", "Return", 
                      "Break", "Print", "This", "New", "NewArray", "ReadInteger", 
                      "ReadLine", "Void", "Null", "Operands", "Stmt", "Paracentesis", 
                      "Tools", "IntConstant", "DoubleConstant", "StringConstant", 
                      "BoolConstant", "Ident" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_ifstmt = 2
    RULE_elsestmt = 3
    RULE_whilestmt = 4
    RULE_forstmt = 5
    RULE_t_int = 6
    RULE_t_double = 7
    RULE_t_bool = 8
    RULE_t_string = 9
    RULE_t_ID = 10
    RULE_t_void = 11
    RULE_t_break = 12
    RULE_t_return = 13
    RULE_t_print = 14
    RULE_t_this = 15
    RULE_t_new = 16
    RULE_constant_int = 17
    RULE_constant_double = 18
    RULE_constant_string = 19
    RULE_constant_bool = 20
    RULE_newArray = 21
    RULE_readInteger = 22
    RULE_readLine = 23
    RULE_t_null = 24
    RULE_operands = 25
    RULE_stmt = 26
    RULE_paracentesis = 27
    RULE_tools = 28

    ruleNames =  [ "program", "decl", "ifstmt", "elsestmt", "whilestmt", 
                   "forstmt", "t_int", "t_double", "t_bool", "t_string", 
                   "t_ID", "t_void", "t_break", "t_return", "t_print", "t_this", 
                   "t_new", "constant_int", "constant_double", "constant_string", 
                   "constant_bool", "newArray", "readInteger", "readLine", 
                   "t_null", "operands", "stmt", "paracentesis", "tools" ]

    EOF = Token.EOF
    Ws=1
    Comment=2
    Int=3
    Double=4
    Bool=5
    String=6
    If=7
    Else=8
    While=9
    For=10
    Return=11
    Break=12
    Print=13
    This=14
    New=15
    NewArray=16
    ReadInteger=17
    ReadLine=18
    Void=19
    Null=20
    Operands=21
    Stmt=22
    Paracentesis=23
    Tools=24
    IntConstant=25
    DoubleConstant=26
    StringConstant=27
    BoolConstant=28
    Ident=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(decafParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.DeclContext)
            else:
                return self.getTypedRuleContext(decafParser.DeclContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = decafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.decl()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.Int) | (1 << decafParser.Double) | (1 << decafParser.Bool) | (1 << decafParser.String) | (1 << decafParser.If) | (1 << decafParser.Else) | (1 << decafParser.While) | (1 << decafParser.For) | (1 << decafParser.Return) | (1 << decafParser.Break) | (1 << decafParser.Print) | (1 << decafParser.This) | (1 << decafParser.New) | (1 << decafParser.NewArray) | (1 << decafParser.ReadInteger) | (1 << decafParser.ReadLine) | (1 << decafParser.Void) | (1 << decafParser.Null) | (1 << decafParser.Operands) | (1 << decafParser.Stmt) | (1 << decafParser.Paracentesis) | (1 << decafParser.Tools) | (1 << decafParser.IntConstant) | (1 << decafParser.DoubleConstant) | (1 << decafParser.StringConstant) | (1 << decafParser.BoolConstant) | (1 << decafParser.Ident))) != 0)):
                    break

            self.state = 63
            self.match(decafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_int(self):
            return self.getTypedRuleContext(decafParser.T_intContext,0)


        def t_double(self):
            return self.getTypedRuleContext(decafParser.T_doubleContext,0)


        def t_bool(self):
            return self.getTypedRuleContext(decafParser.T_boolContext,0)


        def t_string(self):
            return self.getTypedRuleContext(decafParser.T_stringContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(decafParser.IfstmtContext,0)


        def elsestmt(self):
            return self.getTypedRuleContext(decafParser.ElsestmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(decafParser.WhilestmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(decafParser.ForstmtContext,0)


        def t_return(self):
            return self.getTypedRuleContext(decafParser.T_returnContext,0)


        def t_break(self):
            return self.getTypedRuleContext(decafParser.T_breakContext,0)


        def t_print(self):
            return self.getTypedRuleContext(decafParser.T_printContext,0)


        def t_this(self):
            return self.getTypedRuleContext(decafParser.T_thisContext,0)


        def t_new(self):
            return self.getTypedRuleContext(decafParser.T_newContext,0)


        def newArray(self):
            return self.getTypedRuleContext(decafParser.NewArrayContext,0)


        def readInteger(self):
            return self.getTypedRuleContext(decafParser.ReadIntegerContext,0)


        def readLine(self):
            return self.getTypedRuleContext(decafParser.ReadLineContext,0)


        def t_void(self):
            return self.getTypedRuleContext(decafParser.T_voidContext,0)


        def t_null(self):
            return self.getTypedRuleContext(decafParser.T_nullContext,0)


        def constant_bool(self):
            return self.getTypedRuleContext(decafParser.Constant_boolContext,0)


        def constant_double(self):
            return self.getTypedRuleContext(decafParser.Constant_doubleContext,0)


        def constant_int(self):
            return self.getTypedRuleContext(decafParser.Constant_intContext,0)


        def constant_string(self):
            return self.getTypedRuleContext(decafParser.Constant_stringContext,0)


        def t_ID(self):
            return self.getTypedRuleContext(decafParser.T_IDContext,0)


        def operands(self):
            return self.getTypedRuleContext(decafParser.OperandsContext,0)


        def stmt(self):
            return self.getTypedRuleContext(decafParser.StmtContext,0)


        def paracentesis(self):
            return self.getTypedRuleContext(decafParser.ParacentesisContext,0)


        def tools(self):
            return self.getTypedRuleContext(decafParser.ToolsContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = decafParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [decafParser.Int]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.t_int()
                pass
            elif token in [decafParser.Double]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.t_double()
                pass
            elif token in [decafParser.Bool]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.t_bool()
                pass
            elif token in [decafParser.String]:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.t_string()
                pass
            elif token in [decafParser.If]:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.ifstmt()
                pass
            elif token in [decafParser.Else]:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.elsestmt()
                pass
            elif token in [decafParser.While]:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.whilestmt()
                pass
            elif token in [decafParser.For]:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.forstmt()
                pass
            elif token in [decafParser.Return]:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.t_return()
                pass
            elif token in [decafParser.Break]:
                self.enterOuterAlt(localctx, 10)
                self.state = 74
                self.t_break()
                pass
            elif token in [decafParser.Print]:
                self.enterOuterAlt(localctx, 11)
                self.state = 75
                self.t_print()
                pass
            elif token in [decafParser.This]:
                self.enterOuterAlt(localctx, 12)
                self.state = 76
                self.t_this()
                pass
            elif token in [decafParser.New]:
                self.enterOuterAlt(localctx, 13)
                self.state = 77
                self.t_new()
                pass
            elif token in [decafParser.NewArray]:
                self.enterOuterAlt(localctx, 14)
                self.state = 78
                self.newArray()
                pass
            elif token in [decafParser.ReadInteger]:
                self.enterOuterAlt(localctx, 15)
                self.state = 79
                self.readInteger()
                pass
            elif token in [decafParser.ReadLine]:
                self.enterOuterAlt(localctx, 16)
                self.state = 80
                self.readLine()
                pass
            elif token in [decafParser.Void]:
                self.enterOuterAlt(localctx, 17)
                self.state = 81
                self.t_void()
                pass
            elif token in [decafParser.Null]:
                self.enterOuterAlt(localctx, 18)
                self.state = 82
                self.t_null()
                pass
            elif token in [decafParser.BoolConstant]:
                self.enterOuterAlt(localctx, 19)
                self.state = 83
                self.constant_bool()
                pass
            elif token in [decafParser.DoubleConstant]:
                self.enterOuterAlt(localctx, 20)
                self.state = 84
                self.constant_double()
                pass
            elif token in [decafParser.IntConstant]:
                self.enterOuterAlt(localctx, 21)
                self.state = 85
                self.constant_int()
                pass
            elif token in [decafParser.StringConstant]:
                self.enterOuterAlt(localctx, 22)
                self.state = 86
                self.constant_string()
                pass
            elif token in [decafParser.Ident]:
                self.enterOuterAlt(localctx, 23)
                self.state = 87
                self.t_ID()
                pass
            elif token in [decafParser.Operands]:
                self.enterOuterAlt(localctx, 24)
                self.state = 88
                self.operands()
                pass
            elif token in [decafParser.Stmt]:
                self.enterOuterAlt(localctx, 25)
                self.state = 89
                self.stmt()
                pass
            elif token in [decafParser.Paracentesis]:
                self.enterOuterAlt(localctx, 26)
                self.state = 90
                self.paracentesis()
                pass
            elif token in [decafParser.Tools]:
                self.enterOuterAlt(localctx, 27)
                self.state = 91
                self.tools()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(decafParser.If, 0)

        def getRuleIndex(self):
            return decafParser.RULE_ifstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)




    def ifstmt(self):

        localctx = decafParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(decafParser.If)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsestmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else(self):
            return self.getToken(decafParser.Else, 0)

        def getRuleIndex(self):
            return decafParser.RULE_elsestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsestmt" ):
                listener.enterElsestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsestmt" ):
                listener.exitElsestmt(self)




    def elsestmt(self):

        localctx = decafParser.ElsestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_elsestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(decafParser.Else)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def While(self):
            return self.getToken(decafParser.While, 0)

        def getRuleIndex(self):
            return decafParser.RULE_whilestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestmt" ):
                listener.enterWhilestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestmt" ):
                listener.exitWhilestmt(self)




    def whilestmt(self):

        localctx = decafParser.WhilestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whilestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(decafParser.While)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def For(self):
            return self.getToken(decafParser.For, 0)

        def getRuleIndex(self):
            return decafParser.RULE_forstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForstmt" ):
                listener.enterForstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForstmt" ):
                listener.exitForstmt(self)




    def forstmt(self):

        localctx = decafParser.ForstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(decafParser.For)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_intContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(decafParser.Int, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_int" ):
                listener.enterT_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_int" ):
                listener.exitT_int(self)




    def t_int(self):

        localctx = decafParser.T_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_t_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(decafParser.Int)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_doubleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Double(self):
            return self.getToken(decafParser.Double, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_double

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_double" ):
                listener.enterT_double(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_double" ):
                listener.exitT_double(self)




    def t_double(self):

        localctx = decafParser.T_doubleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_t_double)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(decafParser.Double)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_boolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Bool(self):
            return self.getToken(decafParser.Bool, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_bool" ):
                listener.enterT_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_bool" ):
                listener.exitT_bool(self)




    def t_bool(self):

        localctx = decafParser.T_boolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_t_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(decafParser.Bool)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_stringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(decafParser.String, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_string" ):
                listener.enterT_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_string" ):
                listener.exitT_string(self)




    def t_string(self):

        localctx = decafParser.T_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_t_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(decafParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_IDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(decafParser.Ident, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_ID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_ID" ):
                listener.enterT_ID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_ID" ):
                listener.exitT_ID(self)




    def t_ID(self):

        localctx = decafParser.T_IDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_t_ID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(decafParser.Ident)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_voidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Void(self):
            return self.getToken(decafParser.Void, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_void

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_void" ):
                listener.enterT_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_void" ):
                listener.exitT_void(self)




    def t_void(self):

        localctx = decafParser.T_voidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_t_void)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(decafParser.Void)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_breakContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Break(self):
            return self.getToken(decafParser.Break, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_break" ):
                listener.enterT_break(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_break" ):
                listener.exitT_break(self)




    def t_break(self):

        localctx = decafParser.T_breakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_t_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(decafParser.Break)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Return(self):
            return self.getToken(decafParser.Return, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_return" ):
                listener.enterT_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_return" ):
                listener.exitT_return(self)




    def t_return(self):

        localctx = decafParser.T_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_t_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(decafParser.Return)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_printContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Print(self):
            return self.getToken(decafParser.Print, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_print" ):
                listener.enterT_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_print" ):
                listener.exitT_print(self)




    def t_print(self):

        localctx = decafParser.T_printContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_t_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(decafParser.Print)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_thisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def This(self):
            return self.getToken(decafParser.This, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_this

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_this" ):
                listener.enterT_this(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_this" ):
                listener.exitT_this(self)




    def t_this(self):

        localctx = decafParser.T_thisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_t_this)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(decafParser.This)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_newContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def New(self):
            return self.getToken(decafParser.New, 0)

        def getRuleIndex(self):
            return decafParser.RULE_t_new

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_new" ):
                listener.enterT_new(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_new" ):
                listener.exitT_new(self)




    def t_new(self):

        localctx = decafParser.T_newContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_t_new)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(decafParser.New)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_intContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntConstant(self):
            return self.getToken(decafParser.IntConstant, 0)

        def getRuleIndex(self):
            return decafParser.RULE_constant_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_int" ):
                listener.enterConstant_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_int" ):
                listener.exitConstant_int(self)




    def constant_int(self):

        localctx = decafParser.Constant_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_constant_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(decafParser.IntConstant)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_doubleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DoubleConstant(self):
            return self.getToken(decafParser.DoubleConstant, 0)

        def getRuleIndex(self):
            return decafParser.RULE_constant_double

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_double" ):
                listener.enterConstant_double(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_double" ):
                listener.exitConstant_double(self)




    def constant_double(self):

        localctx = decafParser.Constant_doubleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_constant_double)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(decafParser.DoubleConstant)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_stringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringConstant(self):
            return self.getToken(decafParser.StringConstant, 0)

        def getRuleIndex(self):
            return decafParser.RULE_constant_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_string" ):
                listener.enterConstant_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_string" ):
                listener.exitConstant_string(self)




    def constant_string(self):

        localctx = decafParser.Constant_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_constant_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(decafParser.StringConstant)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_boolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BoolConstant(self):
            return self.getToken(decafParser.BoolConstant, 0)

        def getRuleIndex(self):
            return decafParser.RULE_constant_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_bool" ):
                listener.enterConstant_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_bool" ):
                listener.exitConstant_bool(self)




    def constant_bool(self):
